[style] fix bug: wrong color shown when nav-button focused

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ ul.nav li{
 }
 
 /* nav button */
-.nav-button {
+.nav-button, .nav-button:focus{
     margin: 0;
     color: #1EAEDB;
     padding: 0 1em;
